@@ -1,0 +1,6 @@
+#ifndef __DMAP_PRIV_H
+#define __DMAP_PRIV_H
+
+#define G_LOG_DOMAIN "libdmapsharing"
+
+#endif /* __DMAP_PRIV_H */
